# ros_sync_node

./: .gitignore  .gitmodules  README.md  functions_led.ino  ros_sync_node.ino
arduino/software/ros_sync_node/: LED_StateTracker.h  README.md  functions_led.ino  ros_sync_node.ino
arduino/software/ros_sync_node/sync_msgs/: sensorHealthArray.h
sync_msgs/: CMakeLists.txt  package.xml  sensorHealth.h
sync_msgs/msg/: sensorHealth.msg  sensorHealthArrayNamed.msg
sync_node/: CMakeLists.txt  package.xml
sync_node/config/: example.yaml  test.yaml
sync_node/launch/: sync_node.launch  test.launch
sync_node/scripts/: freq_monitor.py  sensor_status_node.py  topic_faker.py
